added basic pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+* {
+box-sizing: border-box;
+}
+
+html {
+height: -webkit-fill-available;
+}
+
+body,
+html {
+text-align: center;
+-ms-text-size-adjust: 100%;
+-webkit-text-size-adjust: 100%;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+margin: 0;
+padding: 0;
+max-width: 100vw;
+scroll-behavior: smooth;
+min-height: 100 dvh;
+min-height: -webkit-fill-available;
+overflow-x: hidden;
+background-color: black;
+color: white;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+img {
+max-width: 100%;
+height: auto;
+}
+
+a {
+text-decoration: none;
+color: var(--white);
+}
+
+ul {
+list-style: none;
+}
+
+.screen-max {
+/* max-width: 1920px; */
+max-width: 1440px;
+/* max-width: 1024px; */
+margin: 0 auto;
+}
+
+.container-main {
+height: 100 dvh;
+margin: auto;
+padding: 0;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+width: 100vw;
+}
+
+.container {
+overflow: hidden;
+}
+
+.container-inner {
+margin: auto;
+position: relative;
+background-color: black;
+width: 97%;
+top: 3%;
+height: 94%;
+overflow: hidden;
+}
+
+.flex {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+
+body::-webkit-scrollbar {
+  width: 2px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(53, 53, 53);
+  outline: none;
 }
