--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,3 +110,11 @@ a {
     color-scheme: dark;
   }
 }
+
+.card {
+  @apply mb-5 block rounded-lg border border-gray-200 shadow-md;
+}
+
+.primary-button {
+  @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
+}
