--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  @apply text-orange-300 hover:text-red-900
 }
 
 @media (prefers-color-scheme: dark) {
