implementing nav bar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,21 +115,21 @@ a {
 }
 
 .card {
-  @apply mb-5 block rounded-lg border border-gray-200 shadow-md bg-[#D66853];
+  @apply mb-5 block rounded-xl border border-gray-200 shadow-md bg-[#D66853];
 }
 
 .primary-button {
-  @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
+  @apply rounded-xl bg-blue-600 py-2 px-4 shadow outline-none hover:bg-blue-500 active:bg-blue-400 text-white;
 }
 
 .default-button {
-  @apply rounded bg-red-300 py-2 px-4 shadow outline-none hover:bg-red-400 active:bg-red-500;
+  @apply rounded-xl bg-red-300 py-2 px-4 shadow outline-none hover:bg-red-400 active:bg-red-500;
 }
 
 input,
 select,
 textarea {
-  @apply rounded border p-2 outline-none ring-indigo-300 focus:ring text-gray-400 bg-gray-800;
+  @apply rounded-xl border p-2 outline-none ring-indigo-300 focus:ring text-gray-400 bg-gray-800;
 }
 
 .dropdown-link {
