small layout change

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -150,7 +150,7 @@ select {
 }
 
 .dropdown-link {
-  @apply flex p-2 hover:bg-gray-400 text-black;
+  @apply flex p-2 hover:bg-[var(--blue)] text-white hover:text-white;
 }
 
 .img {
